# classify-anything

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: inference.py
src/classification_utils/: fine_tuning_vit.py
src/generation_utils/: generation_agent.py
